[package]
name = "final_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
diesel = { version = "2.0.0", features = ["postgres", "numeric"] }
dotenvy = "0.15"
bigdecimal = { version = "0.3.1", features = ["serde"] }
csv = "1.2.1"
